--- a/game/index.html
+++ b/game/index.html
@@ -288,7 +288,7 @@
   <template id="inventoryItemTemplate">
     <article class="card">
       <header class="card-header"></header>
-      <p class="card-body"></p>
+      <div class="card-body"></div>
       <div class="card-footer"></div>
     </article>
   </template>
@@ -296,7 +296,7 @@
   <template id="recipeTemplate">
     <article class="card">
       <header class="card-header"></header>
-      <p class="card-body"></p>
+      <div class="card-body"></div>
       <div class="card-footer"></div>
     </article>
   </template>
