Improve travel screen feedback

--- a/game/index.html
+++ b/game/index.html
@@ -110,6 +110,9 @@
                 <div id="professionRecipes" class="list-grid"></div>
               </section>
             </div>
+            <div id="professionFeedback" class="screen-feedback" role="status" aria-live="polite">
+              Work your trade to gather resources or craft items.
+            </div>
           </section>
         </section>
 
@@ -138,6 +141,9 @@
                 <button id="cancelTravelButton" type="button">Cancel Journey</button>
               </div>
               <div id="travelStatus" class="travel-status"></div>
+              <div id="travelFeedback" class="screen-feedback" role="status" aria-live="polite">
+                Plan your journeys and respond to what unfolds on the road.
+              </div>
             </section>
             <section class="panel">
               <h3>Route Notes</h3>
@@ -172,6 +178,9 @@
                 <button id="refreshMerchantButton" type="button">Refresh Stock</button>
               </div>
               <div id="merchantInfo" class="details-card"></div>
+              <div id="tradeFeedback" class="screen-feedback" role="status" aria-live="polite">
+                Choose goods to buy or sell with the merchants.
+              </div>
             </section>
             <section class="panel">
               <h3>Shop Inventory</h3>
@@ -200,6 +209,9 @@
             <section class="panel">
               <h3>Resident Details</h3>
               <div id="npcDetails" class="details-card"></div>
+              <div id="townFeedback" class="screen-feedback" role="status" aria-live="polite">
+                Speak with residents to hear rumours or request help.
+              </div>
             </section>
           </div>
         </section>
