Add camp supplies, day tracking, and ability rest limits

--- a/game/index.html
+++ b/game/index.html
@@ -50,6 +50,14 @@
             <span class="label">Gold</span>
             <span class="value" id="playerGold">0</span>
           </div>
+          <div class="summary-field">
+            <span class="label">Day</span>
+            <span class="value" id="adventureDay">1</span>
+          </div>
+          <div class="summary-field">
+            <span class="label">Camp Supplies</span>
+            <span class="value" id="campSuppliesValue">0</span>
+          </div>
         </section>
         <nav id="screenNav" class="sidebar-nav" aria-label="Game screens">
           <button class="active" data-screen="character" type="button">Character</button>
