--- a/game/index.html
+++ b/game/index.html
@@ -61,6 +61,7 @@
         </section>
         <nav id="screenNav" class="sidebar-nav" aria-label="Game screens">
           <button class="active" data-screen="character" type="button">Character</button>
+          <button data-screen="professions" type="button">Professions</button>
           <button data-screen="travel" type="button">Travel</button>
           <button data-screen="trade" type="button">Trade</button>
           <button data-screen="town" type="button">Town</button>
@@ -85,7 +86,11 @@
             </section>
             <section class="panel">
               <h3>Abilities</h3>
-              <ul id="playerAbilities"></ul>
+              <ul id="playerAbilities" class="ability-list"></ul>
+              <div class="passive-group">
+                <h4>Passive Effects</h4>
+                <ul id="playerPassives" class="passive-list"></ul>
+              </div>
             </section>
             <section class="panel">
               <h3>Equipment</h3>
@@ -112,37 +117,52 @@
               Spend talent points to unlock new strengths for your hero.
             </div>
           </section>
-          <section class="panel professions-panel">
-            <header class="panel-header">
-              <h3>Professions</h3>
-              <p class="panel-subtitle">Manage trained disciplines and crafting recipes.</p>
-            </header>
-            <ul id="playerProfessions" class="tag-list"></ul>
-            <div class="form-grid">
-              <label for="professionSelect">Active Profession</label>
-              <select id="professionSelect"></select>
-              <p id="professionDescription" class="description"></p>
-              <label for="recipeSelect">Recipes</label>
-              <select id="recipeSelect"></select>
-            </div>
-            <div class="button-row">
-              <button id="gatherButton" type="button">Gather Resources</button>
-              <button id="craftButton" type="button">Craft Item</button>
-            </div>
-            <div class="profession-details">
-              <section>
-                <h4>Available Gatherables</h4>
-                <ul id="professionGatherables" class="bullet-list"></ul>
-              </section>
-              <section>
-                <h4>Crafting Recipes</h4>
-                <div id="professionRecipes" class="list-grid"></div>
-              </section>
-            </div>
-            <div id="professionFeedback" class="screen-feedback" role="status" aria-live="polite">
-              Work your trade to gather resources or craft items.
-            </div>
-          </section>
+        </section>
+
+        <section id="screen-professions" class="main-screen" aria-labelledby="professionsTitle">
+          <header class="screen-header">
+            <h2 id="professionsTitle">Professions</h2>
+            <p class="screen-subtitle">Manage trained disciplines, gather resources, and craft equipment.</p>
+          </header>
+          <div class="screen-grid professions-grid">
+            <section class="panel">
+              <header class="panel-header">
+                <h3>Active Discipline</h3>
+                <p class="panel-subtitle">Select which trade to focus on while travelling or resting.</p>
+              </header>
+              <ul id="playerProfessions" class="tag-list"></ul>
+              <div class="form-grid">
+                <label for="professionSelect">Trained Profession</label>
+                <select id="professionSelect"></select>
+                <p id="professionDescription" class="description"></p>
+                <label for="recipeSelect">Learned Recipes</label>
+                <select id="recipeSelect"></select>
+              </div>
+              <div class="button-row">
+                <button id="gatherButton" type="button">Gather Resources</button>
+                <button id="craftButton" type="button">Craft Item</button>
+              </div>
+              <div id="professionFeedback" class="screen-feedback" role="status" aria-live="polite">
+                Work your trade to gather resources or craft items.
+              </div>
+            </section>
+            <section class="panel">
+              <header class="panel-header">
+                <h3>Materials &amp; Recipes</h3>
+                <p class="panel-subtitle">Review where to harvest materials and what you can create.</p>
+              </header>
+              <div class="profession-details">
+                <section>
+                  <h4>Available Gatherables</h4>
+                  <ul id="professionGatherables" class="bullet-list"></ul>
+                </section>
+                <section>
+                  <h4>Crafting Recipes</h4>
+                  <div id="professionRecipes" class="list-grid"></div>
+                </section>
+              </div>
+            </section>
+          </div>
         </section>
 
         <section id="screen-travel" class="main-screen" aria-labelledby="travelTitle">
